--- a/assets/style.css
+++ b/assets/style.css
@@ -4,3 +4,18 @@
     /* transform: translate(-10%, -10%); */
    
 
+    h1 {
+      text-align: center;
+      font-size: 90px;
+      background: linear-gradient(to right, rgb(52, 38, 214), rgb(108, 106, 106), rgb(173, 88, 102));
+      -webkit-background-clip: text;
+      -webkit-text-fill-color: transparent;
+    }
+    
+    nav {
+      background-color: rgb(17, 66, 109);
+      border: 15px solid rgb(247, 244, 244);
+      border-radius: 50% 50% 50% 50% / 25% 25% 25% 25% ;
+      text-align: center;
+    
+    }
